# zapiski-ai-billing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py  user_verification.proto  user_verification.py  user_verification_pb2.py  user_verification_pb2_grpc.py
