[tool.poetry]
name = "zapiski-ai-billing"
version = "0.1.0"
description = ""
authors = ["Vanja Stojanović <vanja.stojanovic25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
httpx = "^0.27.2"
apscheduler = "^3.10.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
